--- a/mapa.html
+++ b/mapa.html
@@ -1,17 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CASAMIA FOOD PUB</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <title>CASAMIA FOOD-pub</title>
+    <link rel="stylesheet" href="/css/mapa.css">
 </head>
 <body>
     <!-- Barra de navegación -->
     <header>
         <nav>
             <div class="logo">
-                <img src="/Imagenes/CASAMIA.jpeg" alt="Logo casamia"><a href="index.html"></a>
+                <img src="/Imagenes/CASAMIA.jpeg" alt="Logo casamia">
             </div>
 
             <input type="checkbox" id="check">
@@ -26,10 +27,10 @@
                         <li><a href="vision.html">Visión</a></li>
                         <li><a href="buzon.html">Buzón de sugerencias</a></li>
                         <li><a href="mapa.html">Mapa</a></li>
+
                     </ul>
                 </li>
-
-                <li><a href="regitarse.html">ingresar</a></li>
+                <li><a href="regitarse.html">Ingresar</a></li>
                 <li><a href="#">Carta</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="#">reservaciones</a></li>
@@ -39,39 +40,12 @@
         </nav>
     </header>
 
-    <!-- Banner principal -->
-    <section class="banner">
-        <div class="banner-content">
-            <h1>CASAMIA</h1>
-            <h4>FOOD-PUB</h4>
-            <p>Disfruta de nuestras deliciosas promociones y menús exclusivos.</p>
-         
-        </div>
-    </section>
+    <div class="map">
+        <h2>Mapa</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1993.4456509526653!2d-75.623033!3d2.1948273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e24d9d2b60a4799%3A0x14ca6e8e0b643a0e!2sCasamia%20Food-Pub%20%7C%20Comida%20R%C3%A1pida!5e0!3m2!1sen!2sco!4v1733141435510!5m2!1sen!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 
-    <!-- Sección de promociones -->
-    <section class="promotions">
-        <h2>¡Promociones Exclusivas!</h2>
-        <div class="promo-cards">
-            <div class="promo-card">
-                <img src="/Imagenes/krispy pork.jpeg" alt="Promoción 1" height="245px">
-                <h3>crispy pork</h3>
-                <p>Disfruta con tu amigo, ¡y ahorra!</p>
-            </div>
-            <div class="promo-card">
-                <img src="/Imagenes/combo kids.jpeg" alt="Promoción 2">
-                <h3>Combo kids</h3>
-                <p>Un para que tus niños lo disfruten.</p>
-            </div>
-            <div class="promo-card">
-                <img src="/Imagenes/chingona.jpeg" alt="Promoción 3">
-                <h3>chingona</h3>
-                <p>¿Te gustan los sabores más picantes?</p>
-            </div>
-        </div>
-    </section>
 
-    <!-- Footer -->
     <footer>
         <h5>Horarios de atención</h5>
         <h6>Lunes a viernes</h6>
@@ -85,7 +59,31 @@
             <img src="Imagenes/facebook.png" width="30px" height="30px">
         </div>
     </footer>
+   
 
-    <script src="JavaScript/estilo.js"></script>
+
+        
 </body>
+
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
