--- a/mas.html
+++ b/mas.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CASAMIA FOOD PUB</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="/css/mas.css">
 </head>
 <body>
     <!-- Barra de navegación -->
     <header>
         <nav>
             <div class="logo">
-                <img src="/Imagenes/CASAMIA.jpeg" alt="Logo casamia"><a href="index.html"></a>
+                <img src="/Imagenes/CASAMIA.jpeg" alt="Logo casamia">
             </div>
 
             <input type="checkbox" id="check">
@@ -20,16 +20,16 @@
             </label>
             <ul class="menu">
                 <li class="dropdown">
-                    <a href="mas.html" class="dropdown-toggle">Más</a>
+                    <a href="#" class="dropdown-toggle">Más</a>
                     <ul class="dropdown-menu">
                         <li><a href="mision.html">Misión</a></li>
                         <li><a href="vision.html">Visión</a></li>
                         <li><a href="buzon.html">Buzón de sugerencias</a></li>
                         <li><a href="mapa.html">Mapa</a></li>
+                        
                     </ul>
                 </li>
-
-                <li><a href="regitarse.html">ingresar</a></li>
+                <li><a href="regitarse.html">Ingresar</a></li>
                 <li><a href="#">Carta</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="#">reservaciones</a></li>
@@ -39,39 +39,9 @@
         </nav>
     </header>
 
-    <!-- Banner principal -->
-    <section class="banner">
-        <div class="banner-content">
-            <h1>CASAMIA</h1>
-            <h4>FOOD-PUB</h4>
-            <p>Disfruta de nuestras deliciosas promociones y menús exclusivos.</p>
-         
-        </div>
-    </section>
 
-    <!-- Sección de promociones -->
-    <section class="promotions">
-        <h2>¡Promociones Exclusivas!</h2>
-        <div class="promo-cards">
-            <div class="promo-card">
-                <img src="/Imagenes/krispy pork.jpeg" alt="Promoción 1" height="245px">
-                <h3>crispy pork</h3>
-                <p>Disfruta con tu amigo, ¡y ahorra!</p>
-            </div>
-            <div class="promo-card">
-                <img src="/Imagenes/combo kids.jpeg" alt="Promoción 2">
-                <h3>Combo kids</h3>
-                <p>Un para que tus niños lo disfruten.</p>
-            </div>
-            <div class="promo-card">
-                <img src="/Imagenes/chingona.jpeg" alt="Promoción 3">
-                <h3>chingona</h3>
-                <p>¿Te gustan los sabores más picantes?</p>
-            </div>
-        </div>
-    </section>
+  
 
-    <!-- Footer -->
     <footer>
         <h5>Horarios de atención</h5>
         <h6>Lunes a viernes</h6>
@@ -85,7 +55,6 @@
             <img src="Imagenes/facebook.png" width="30px" height="30px">
         </div>
     </footer>
-
-    <script src="JavaScript/estilo.js"></script>
+   
 </body>
 </html>
